--- a/src/positive-html.html
+++ b/src/positive-html.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <h1>{{{initialWords r.name }}} <span style="color: darkturquoise;">{{{lastWord r.name }}}</span></h1>
+        <h1>{{{initialWords r.name }}} <span style="color: #{{color 'accent'}};">{{{lastWord r.name }}}</span></h1>
         <span class="label">{{{ r.info.label }}}</span>
         <p id="contact">
           {{#if r.contact.email}}<span class="email"><a href="mailto:{{ RAW.contact.email }}">{{{ r.contact.email }}}</a></span>{{/if}}
