Fixed pdf render for other experiences

--- a/src/positive-pdf.html
+++ b/src/positive-pdf.html
@@ -50,7 +50,7 @@
       {{> section/affiliation }}
 
       {{#*inline "icon-service"}}<span class="fa fa-lg fa-child"></span>{{/inline}}
-      {{> section/service }}
+      {{> service-pdf }}
 
       {{#*inline "icon-samples"}}<span class="fa fa-lg fa-share"></span>{{/inline}}
       {{> section/samples }}
