redesigned functional layout

--- a/src/positive-html.html
+++ b/src/positive-html.html
@@ -36,9 +36,9 @@
 
       {{> skills-html}}
 
-      {{> employment }}
+      {{> projects }}
 
-      {{> section/projects }}
+      {{> employment }}
 
       {{> education }}
 
