--- a/src/positive-pdf.html
+++ b/src/positive-pdf.html
@@ -37,11 +37,11 @@
       {{#*inline "icon-skills"}}<span class="fa fa-lg fa-code"></span>{{/inline}}
       {{> skills-pdf }}
 
+      {{#*inline "icon-projects"}}<span class="fa fa-lg fa-star"></span>{{/inline}}
+      {{> projects }}
+
       {{#*inline "icon-employment"}}<span class="fa fa-lg fa-building"></span>{{/inline}}
       {{> employment }}
-
-      {{#*inline "icon-projects"}}<span class="fa fa-lg fa-star"></span>{{/inline}}
-      {{> section/projects }}
 
       {{#*inline "icon-education"}}<span class="fa fa-lg fa-mortar-board"></span>{{/inline}}
       {{> section/education }}
